First commited as before_50004_rev2